# adventofcode_2022

./: .gitignore  CMakeLists.txt  README.md
day01/: go.py
day02/: go.py
day03/: go.py
day04/: go.py
day05/: go.py
day06/: go.py
day07/: go.py
day08/: go.py
day09/: go.py
day10/: go.py
day11/: go.py
day12/: go.py
day13/: go.py
